--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 android {
+
     namespace 'com.example.wheatherstation_uah'
     compileSdk 34
 
@@ -37,6 +38,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation libs.androidx.core.ktx
@@ -58,4 +60,7 @@ dependencies {
     androidTestImplementation libs.androidx.ui.test.junit4
     debugImplementation libs.androidx.ui.tooling
     debugImplementation libs.androidx.ui.test.manifest
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+
 }
